--- a/index.html
+++ b/index.html
@@ -660,6 +660,9 @@
                     <h3>Portfolio Website</h3>
                     <p>To create an online space to showcase my skills, projects, and achievements in a clear and professional way.</p>
                     <p>I designed and coded the entire website myself using HTML and CSS. I planned the layout, wrote the content, and made it responsive for all devices.</p>
+                    <div class="project-links">
+                        <a href="https://personalpotfolio159.netlify.app/" target="_blank" class="btn">View Project</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>Netflix Clone Website</h3>
