--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@
                     <a href="TATA STEEL.pdf" class="btn">View Certificate</a>
                 </div>
             </div>
+            
 
             <div class="experience">
                 <div class="experience-header">
@@ -729,6 +730,20 @@
                         <a href="https://personalpotfol.netlif/" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <h3>Expence Traker</h3>
+                    <p>To create an online space to see my monthly expences.</p>
+                    <p>I designed and coded the entire website myself. I planned the layout, wrote the content, and made it responsive for all devices.</p>
+                    <p>It stores 12 month epence.</p>
+                    <p>More further update will be there, according to user.</p>
+                    <div class="project-links">
+                        <a href="https://money-expence-tracker.netlify.app/" target="_blank" class="btn">View Project</a>
+                    </div>
+                </div>
+
+
+
                 <div class="project-card">
                     <h3>Netflix Clone Website</h3>
                     <p>A static clone of the Netflix homepage built with HTML and CSS.</p>
