--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                     <p>It stores 12 month epence.</p>
                     <p>More further update will be there, according to user.</p>
                     <div class="project-links">
-                        <a href="https://money-expence-tracker.netlify.app/" target="_blank" class="btn">View Project</a>
+                        <a href="https://personalpotfolio159.netlify.app/" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
 
@@ -762,19 +762,19 @@
             <div class="education-item">
                 <h3>GITA AUTONOMOUS COLLEGE | BHUBANESWAR | INDIA</h3>
                 <p>B.TECH Computer Science and Engineering with AI | 2022 - 2026(On Going)</p>
-                <p>SCGPA - X.XX (Till 6th semester)</p>
+                <p>SCGPA - 7.10 (Till 6th semester)</p>
             </div>
             
             <div class="education-item">
                 <h3>NETAJI SUBHAS PUBLIC SCHOOL | JAMSHEDPUR | INDIA</h3>
                 <p>Class (XII th) | 2021 - 2022 | CBSE Board</p>
-                <p>Score - XX.XX</p>
+                <p>Score - 52.80</p>
             </div>
             
             <div class="education-item">
                 <h3>NETAJI SUBHAS PUBLIC SCHOOL | JAMSHEDPUR | INDIA</h3>
                 <p>Class (X th) | 2019 - 2020 | CBSE Board</p>
-                <p>Score - XX.XX</p>
+                <p>Score - 61.20</p>
             </div>
         </div>
     </section>
