--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                     <p>To create an online space to showcase my skills, projects, and achievements in a clear and professional way.</p>
                     <p>I designed and coded the entire website myself using HTML and CSS. I planned the layout, wrote the content, and made it responsive for all devices.</p>
                     <div class="project-links">
-                        <a href="https://personalpotfol.netlif/" target="_blank" class="btn">View Project</a>
+                        <a href="https://personalpotfolio159.netlify.app/#projects" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
 
@@ -738,7 +738,7 @@
                     <p>It stores 12 month epence.</p>
                     <p>More further update will be there, according to user.</p>
                     <div class="project-links">
-                        <a href="https://personalpotfolio159.netlify.app/" target="_blank" class="btn">View Project</a>
+                        <a href="https://expencetrackervk.netlify.app/" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
 
